# vmesteTrenimBot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  app.db  main.py  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 334c28e6ae6d_add_mvp_fields_user_profile_event_.py  3a4c76ef5873_add_sports_table_and_relations.py  8f2c9d1a4b6e_seed_sports_from_enum.py  ba1e431dd0fc_initial_migration.py  c1b2d3e4f5a6_create_weights_table.py  d9b3c1a2f4e5_add_admin_and_broadcasts.py
backend/src/: admin.py  config.py  database.py  logger.py
backend/src/admin_api/: deps.py  router.py
backend/src/broadcasts/: __init__.py  models.py  repository.py  router.py  schemas.py
backend/src/events/: __init__.py  applications_crud.py  crud.py  models.py  repository.py  router.py  schemas.py
backend/src/repositories/: __init__.py  base.py
backend/src/sports/: __init__.py  crud.py  models.py  repository.py  router.py  schemas.py
backend/src/users/: __init__.py  crud.py  models.py  repository.py  router.py  schemas.py
backend/src/weights/: __init__.py  models.py  repository.py  router.py  schemas.py
bot/: .dockerignore  Dockerfile  README.md  api_client.py  bot.py  common.py  config.py  logger.py  main.py  middleware.py  pyproject.toml  utils.py
bot/handlers/: __init__.py  admin.py  applications.py  events.py  profile.py  registration.py  start.py  unknown.py  weights.py
bot/keyboards/: __init__.py  admin_menu.py  main_menu.py
bot/states/: __init__.py  admin.py  event_creation.py  registration.py  weights.py
deployment/: README.md  docker-compose.yaml  start.sh
scripts/: __init__.py  init_env.py  up_docker.py
