[project]
name = "bot"
version = "0.1.0"
description = "Telegram bot for vmesteTrenim"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytelegrambotapi>=4.29.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=3.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["bot", "handlers", "keyboards", "states"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
